fixed compiled error in user application tests